# Stage2024

./: .gitignore  PathMemo.txt  README.md  README2.md  main.py  pyproject.toml  requirements.txt  scratch
Database/sub-01/beh/: sub-01_task-work_questionnaire_beh.xlsx
Database/sub-02/beh/: sub-02_task-work_questionnaire_beh.xlsx
Database/sub-03/beh/: sub-03_task-work_questionnaire_beh.xlsx
Database/sub-04/beh/: sub-04_task-work_questionnaire_beh.xlsx
Database/sub-05/beh/: sub-05_task-work_questionnaire_beh.xlsx
Interface_Graphique/: Brouillon.py  Interface1.py  acceuil.py  fonctions.py  interface1.py  interface2.py  main.py  page_particpant.py  requirements.txt
Interface_Graphique/pages/: acceuil.py  info_participant.py  lettre_information.py  principal.py  questionnaire.py  questionnaire_participant.py  recapitulatif.py
Interface_Graphique/tools/: _notif_inutile_doublon.py  button_quit.py  buttons.py  buttons_alignement.py  class_taches.py  comboboxes.py  entries.py  formats.py  frames.py  labels.py  likert.py  likerts.py  packs.py  radiobuttons.py  scrollable_frames.py  textboxes.py  tooltips.py  variables_likert.py  voice_recorder.py
Interface_Graphique/var_fonc/: functions.py  recolte_donnes.py  variables_info.py  variables_likert.py  variables_pages.py  variables_path.py  variables_textes.py
OpenVibe/Scenario/: EcritureEEG.xml  VerificationReader.xml  placementStimulation.xml
OpenVibe/ScriptLua/: algoLuaListe.lua
Sources/: ###Informations personnelles .txt  anonymat.xlsx  info_participants.xlsx  taches.xlsx  types_err.xlsx
(+9 files in other folders)
